@@ -3,10 +3,11 @@
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xmlns:osgi="http://www.springframework.org/schema/osgi"
    xmlns:p="http://www.springframework.org/schema/p"
+   xmlns:util="http://www.springframework.org/schema/util"
    xsi:schemaLocation="http://www.springframework.org/schema/beans   
      http://www.springframework.org/schema/beans/spring-beans.xsd
-     http://www.springframework.org/schema/osgi
-     http://www.springframework.org/schema/osgi/spring-osgi.xsd">
+     http://www.springframework.org/schema/osgi http://www.springframework.org/schema/osgi/spring-osgi.xsd
+     http://www.springframework.org/schema/util http://www.springframework.org/schema/util/spring-util.xsd">
 
     <osgi:reference id="myTomcatServer"
 		interface="org.apache.catalina.Service" 
@@ -15,5 +16,10 @@
     <bean id="warDeployer"    
         class="org.springframework.osgi.web.deployer.tomcat.TomcatWarDeployer"
         p:service-ref="myTomcatServer"/>
+        
+	<util:properties id="extenderProperties">
+		<prop key="smth">bla</prop>
+		<prop key="undeploy.wars.at.shutdown">true</prop>
+	</util:properties>
 
 </beans>
